// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIRadio should be a small variant, if specified 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
  >
    <input
      aria-labelledby="xui-testRadioId"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-small"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
    <span
      className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small"
      id="xui-testRadioId"
    >
      Howdy, folks!
    </span>
  </label>
</div>
`;

exports[`XUIRadio should be a xsmall variant, if specified 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-xsmall"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
  >
    <input
      aria-labelledby="xui-testRadioId"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-xsmall"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-xsmall"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
    <span
      className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-xsmall"
      id="xui-testRadioId"
    >
      Howdy, folks!
    </span>
  </label>
</div>
`;

exports[`XUIRadio should have a hidden label, if specified 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
  >
    <input
      aria-label="Hidden label"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-medium"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
  </label>
</div>
`;

exports[`XUIRadio should have a qaHook on the root node if provided 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    data-automationid="cheese-and-crackers"
    onClick={[Function]}
  >
    <input
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      data-automationid="cheese-and-crackers--input"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-medium"
      data-automationid="cheese-and-crackers--radio"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
  </label>
</div>
`;

exports[`XUIRadio should have label text if provided 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
  >
    <input
      aria-labelledby="xui-testRadioId"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-medium"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
    <span
      className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-medium"
      id="xui-testRadioId"
    >
      Howdy, folks!
    </span>
  </label>
</div>
`;

exports[`XUIRadio should render with an icon when one is provided 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
  >
    <input
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-iconwrapper"
    >
      <svg
        className="xui-icon"
        height={15}
        viewBox="0 0 15 15"
        width={15}
      >
        <path
          className="xui-styledcheckboxradio--focus-outer"
          d="M7.5 12.5l-5 2.5.833-5.417L0 5.833 5 5l2.5-5L10 5l5 .833-3.333 3.75L12.5 15z"
          role="presentation"
        />
        <path
          className="xui-styledcheckboxradio--focus"
          d="M7.5 12.5l-5 2.5.833-5.417L0 5.833 5 5l2.5-5L10 5l5 .833-3.333 3.75L12.5 15z"
          role="presentation"
        />
        <path
          className="xui-styledcheckboxradio--main"
          d="M7.5 12.5l-5 2.5.833-5.417L0 5.833 5 5l2.5-5L10 5l5 .833-3.333 3.75L12.5 15z"
          role="presentation"
        />
      </svg>
      <div
        className="xui-touchtarget"
      />
    </div>
  </label>
</div>
`;

exports[`XUIRadio should render with validation message 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
  >
    <input
      aria-describedby="xui-testRadioId-message"
      aria-invalid={true}
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      defaultChecked={false}
      disabled={false}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-medium"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
  </label>
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid xui-styledcheckboxradio--message"
    id="xui-testRadioId-message"
    role="status"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 Z M7,4 L7,9 L9,9 L9,4 L7,4 Z M7,10 L7,12 L9,12 L9,10 L7,10 Z"
        role="presentation"
      />
    </svg>
    Test validation
  </div>
</div>
`;
